Fixing active state not working on mobile

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ a {
   transition: 0.1s;
 }
 
-.block:hover + .amount, .block:focus + .amount,  .block:active + .amount{
+.block:hover + .amount,  .block:active + .amount{
   opacity: 1;
   transition: 0.2s;
 }
